Fix Wufoo form being too tall.

--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -693,11 +693,11 @@ section
   .display
     background: #0d0d0d
     color: #888
-    padding: 40px 0
+    padding: 40px 0 0 0
 
   .content
     padding-left: 0
-    min-height: 500px
+    min-height: 300px
 
     h2, h3, strong
       color: #aaa
